syntax = "proto3";
option java_multiple_files = true;
package com.github.anjeyy.proto;


message HelloRequest{
  /*
   * assigned number is used by the protocol buffer to represent
   * the attribute instead of using the attribute name
   *
   * f.e. instead representing 'firstName' like in Json, protocol buffer uses '1'
   */
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse{
  string geeting = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc helloInputStream(stream HelloRequest) returns (HelloResponse);
  rpc helloOutputStream(HelloRequest) returns (stream HelloResponse);
  rpc helloBiStream(stream HelloRequest) returns (stream HelloResponse);
}